[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "phelpsGPT"
version = "0.0.1"
authors = [
  { name="Andrea Mascaretti", email="amascare@sissa.it" },
]
description = "A tiny LLM built from scratch"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["version"]
dependencies = [
    "requests"
]

[project.urls]
Homepage = "https://github.com/mascaretti/phelpsGPT"
Issues = "https://github.com/mascaretti/phelpsGPT/issues"
[tool]

[tool.hatch.metadata]
allow-direct-references = true
